--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -105,7 +105,7 @@ import thumbnail from '../images/terrain-blog/thumbnail.jpg'
       title='1d3trees: Tabletop DIY Blog'
       description="Blog for detailing the process of crafting bits and bobs for tabletop games, and showcasing miniatures I've painted"
       image={thumbnail}
-      url='#'
+      url='blog'
     />
   </Section>
 
