--- a/src/components/ListItem.astro
+++ b/src/components/ListItem.astro
@@ -1,3 +1,3 @@
-<li class='mb-2 pl-4 bg-[url(/bullet.svg)] bg-no-repeat bg-left'>
+<li class='mb-2 pl-4 bg-[url(/bullet.svg)] bg-no-repeat bg-[left_top_11px]'>
   <slot />
 </li>
