--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -33,11 +33,11 @@ import thumbnail from '../images/terrain-blog/thumbnail.jpg'
       I first felt the excitement of programming when I was 12 and hunkered down
       with a copy of Sams Teach Yourself HTML 4 in 24 Hours and made my first
       "Laura's web page". It was bright yellow and offensively garish, but it
-      opened a door for me into design. After that I was obsessed with Photoshop
-      and had dreams of becoming a graphic designer that didn't pan out. It
-      wasn't until my husband went to school for computer science that I got
-      into programming again. That's when things clicked for me and I was hooked
-      for good.
+      opened a door for me into coding and design. After that I was obsessed
+      with Photoshop and had dreams of becoming a graphic designer that didn't
+      pan out. It wasn't until my husband went to school for computer science
+      that I got into programming again. That's when things clicked for me and I
+      was hooked for good.
     </p>
     <p class='mb-12 max-w-lg'>
       Since then, for over a decade I have been exploring different areas of
