Add Heading component

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,6 +9,7 @@ import mealAppThumbnail from '../images/meal-app/thumbnail.jpg'
 import vrTacticsThumbnail from '../images/vr-tactics/thumbnail.jpg'
 import thumbnail from '../images/terrain-blog/thumbnail.jpg'
 import ListItem from '../components/ListItem.astro'
+import Heading from '../components/Heading.astro'
 ---
 
 <Layout title='Laura Cleveland'>
@@ -54,7 +55,7 @@ import ListItem from '../components/ListItem.astro'
   </Section>
 
   <Section>
-    <h2 class='mb-10 text-2xl font-bold'>My Skills</h2>
+    <Heading>My Skills</Heading>
 
     <!-- I know there is a way to do thirds for these that has better balance -->
     <ul class='grid grid-cols-2 gap-2 text-sm font-medium uppercase'>
@@ -74,7 +75,7 @@ import ListItem from '../components/ListItem.astro'
   </Section>
 
   <Section>
-    <h2 class='mb-6 text-2xl font-bold'>Featured Projects</h2>
+    <Heading>Featured Projects</Heading>
     <p class='mb-16 max-w-lg'>
       I like to pursue projects that are complex enough to sufficiently
       challenge my abilities and that will lead to really worthwhile learning.
@@ -111,7 +112,7 @@ import ListItem from '../components/ListItem.astro'
   </Section>
 
   <Section>
-    <h2 class='mb-6 text-2xl font-bold'>Get in touch</h2>
+    <Heading>Get in touch</Heading>
     <!-- <p class='mb-6 max-w-md'>
       Anim Lorem et esse sunt duis commodo culpa exercitation est pariatur Lorem
       qui mollit adipisicing.
